# fast-api-masterclass

./: .gitignore  README.md
authentication/: database.py  main.py  pyproject.toml
database-management/: database.py  main.py  models.py  pyproject.toml
rent-a-room/: main.py  pyproject.toml
