[project]
name = "authentication"
version = "0.1.0"
description = "Rent-a-Room application for guests to book rooms"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "sqlmodel>=0.0.39",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]

[tool.ruff.lint]
select = ["I"]